--- a/Something/pom.xml
+++ b/Something/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>sxg</groupId>
-  <artifactId>HappyTeams</artifactId>
+  <artifactId>PageRanks</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>HappyTeams</name>
+  <name>PageRanks</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
